--- a/pre-commit/dot-pre-commit-config.yaml
+++ b/pre-commit/dot-pre-commit-config.yaml
@@ -9,12 +9,12 @@ repos:
     rev: 5.13.2
     hooks:
     -   id: isort
-        args: [--profile=black]
+        args: ["--profile=black"]
 -   repo: https://github.com/psf/black
     rev: 24.2.0
     hooks:
     -   id: black
-        args: [--line-length=79]
+        args: ["--line-length=79"]
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
@@ -23,4 +23,14 @@ repos:
     rev: 7.4.1
     hooks:
     -   id: pip-compile
-        args: [--generate-hashes]
+        args: ["--generate-hashes"]
+- repo: https://github.com/nbQA-dev/nbQA
+  rev: 1.8.5
+  hooks:
+    - id: nbqa-black
+      additional_dependencies: [jupytext, black]  # optional, only if you're using Jupytext
+      args: ["--line-length=79"]
+    - id: nbqa-pyupgrade
+      args: ["--py37-plus"]
+    - id: nbqa-isort
+      args: ["--float-to-top", "--profile=black"]
