--- a/pre-commit/dot-pre-commit-config.yaml
+++ b/pre-commit/dot-pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
     hooks:
     -   id: pip-compile
         args: ["--generate-hashes"]
+        stages: ["manual"]
 - repo: https://github.com/nbQA-dev/nbQA
   rev: 1.8.5
   hooks:
