--- a/pre-commit/dot-pre-commit-config.yaml
+++ b/pre-commit/dot-pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
+        args: ["--max-line-length=100"]
   - repo: https://github.com/jazzband/pip-tools
     rev: 7.4.1
     hooks:
